--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
+DateTime==5.5
 distro==1.9.0
 fastapi==0.115.6
 groq==0.13.0
@@ -22,7 +23,10 @@ openai==1.57.0
 orjson==3.10.12
 packaging==24.2
 pydantic==2.5.2
+pydantic-settings==2.6.1
+pydantic_core==2.14.5
 python-dotenv==1.0.1
+pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
 requests-toolbelt==1.0.0
@@ -33,3 +37,4 @@ tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3==2.2.3
 uvicorn==0.32.1
+zope.interface==7.2
