--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,11 @@ idna==3.10
 jiter==0.8.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-langsmith==0.1.147
+#langsmith==0.1.147
 openai==1.57.0
 orjson==3.10.12
 packaging==24.2
-pydantic==2.5.2
+#pydantic==2.5.2
 python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
