--- a/requirements.txt
+++ b/requirements.txt
@@ -11,15 +11,15 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+Jinja2==3.1.4
 jiter==0.8.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-#langsmith==0.1.147
+MarkupSafe==3.0.2
 openai==1.57.0
 orjson==3.10.12
 packaging==24.2
-#pydantic==2.5.2
-python-dotenv==1.0.1
+pydantic==2.5.2
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
