--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.7
 colorama==0.4.6
 DateTime==5.5
 distro==1.9.0
+dnspython==2.7.0
 fastapi==0.115.6
 h11==0.14.0
 httpcore==1.0.7
@@ -15,11 +16,16 @@ Jinja2==3.1.4
 jiter==0.8.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+langchain-core==0.3.22
+langsmith==0.1.147
 MarkupSafe==3.0.2
 openai==1.57.0
 orjson==3.10.12
 packaging==24.2
 pydantic==2.5.2
+pydantic_core==2.14.5
+pymongo==4.10.1
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
