--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pydantic==2.5.2
 pydantic_core==2.14.5
 pymongo==4.10.1
 python-dotenv==1.0.1
+python-multipart==0.0.19
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
